<resources>
    <string name="app_name" translatable="false">American regiment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="order" translatable="false">订单</string>
    <string name="my" translatable="false">我的</string>
    <string name="home" translatable="false">首页</string>
    <string name="title" translatable="false">美团外卖+</string>
    <string name="zhonghe" translatable="false">综合排序</string>
    <string name="xiaoliang" translatable="false">销量最高</string>
    <string name="juli" translatable="false">距离最近</string>
    <string name="shaixuan" translatable="false">筛选</string>
    <string name="fujin" translatable="false">——附近商家——</string>
    <string name="name" translatable="false">名称</string>
    <string name="suos" translatable="false">搜索</string>
    <string name="mine_head_title" translatable="false">我的</string>
    <string name="main_login_title" translatable="false">登录</string>
    <string name="main_mine_pwd_edit" translatable="false">请输入密码</string>
    <string name="main_mine_pwd_text" translatable="false">密码</string>
    <string name="main_login_title_name_edit" translatable="false">请输入用户名</string>
    <string name="main_login_name_text" translatable="false">账号</string>
    <string name="main_login_btn" translatable="false">登录</string>
    <string name="shouhuo">选择收货地址</string>
    <string name="dianji">点击定位当前位置</string>
    <string name="back02"><![CDATA[<]]></string>
    <string name="huodong"><![CDATA[3个活动>]]></string>
</resources>
