<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:id="@+id/main_frame"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/main_rg"
        android:orientation="horizontal"
        >
        <RadioButton
            style="@style/MyStyle"
            android:checked="true"
            android:text="@string/home"
            android:drawableTop="@drawable/btn1_selector"
            android:textColor="@drawable/text_selector"
            android:id="@+id/btn_home"
            />
        <RadioButton
            style="@style/MyStyle"
            android:text="@string/order"
            android:drawableTop="@drawable/btn2_selector"
            android:textColor="@drawable/text_selector"
            android:id="@+id/btn_order"
            />
        <RadioButton
            style="@style/MyStyle"
            android:text="@string/my"
            android:drawableTop="@drawable/btn3_selector"
            android:textColor="@drawable/text_selector"
            android:id="@+id/btn_my"
            />
    </RadioGroup>
</LinearLayout>