<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e1dede"
        >
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="6dp"
            android:src="@drawable/back"
            android:id="@+id/show_back"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="ddd"
            android:gravity="center"
            android:layout_marginTop="6dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/show_title"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/show_zonghe"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/zhonghe"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/show_gao"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/xiaoliang"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/show_juli"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/juli"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/show_shaixuan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/shaixuan"
            android:textSize="18sp" />
    </LinearLayout>
    <com.handmark.pulltorefresh.library.PullToRefreshScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/show_pull_to_refresh"
        >
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/show_recycler"
            >

        </android.support.v7.widget.RecyclerView>
    </com.handmark.pulltorefresh.library.PullToRefreshScrollView>

</LinearLayout>