<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linea"
        android:padding="8dp"
        >
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/back"
            android:layout_gravity="center"
            android:id="@+id/addr_img"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/shouhuo"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linea"
        android:id="@+id/linea02"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:background="@drawable/shape02"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="18dp"
                android:src="@drawable/a_4"
                android:layout_gravity="center"
                android:paddingRight="6dp"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:hint="请输入 商品 店铺名"
                android:textSize="16sp"
                android:gravity="center"
                android:textStyle="bold"
                android:background="@null"
                android:id="@+id/addr_context"
                />
        </LinearLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:background="#bbb7b7"
            android:text="@string/suos"
            android:id="@+id/addr_btn"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/linea02"
        android:layout_marginTop="18dp"
        android:text="@string/dianji"
        android:textSize="18sp"
        android:gravity="center"
        android:background="#A6A6A6"
        android:id="@+id/addr_dianji"
        />
</RelativeLayout>